# NewGE2

ge2/dandelion-dev/: .gitignore  2gpu_ablation_results_template.md  4gpu_ablation_results_template.md  CMakeLists.txt  README.md  main_opt_flag_tables.md  single_gpu_ablation_results_template.md
ge2/dandelion-dev/gege/: CMakeLists.txt
ge2/dandelion-dev/gege/configs/: fb15k.yaml  fb15k_tring2.yaml  freebase86m_16p_paper.yaml  (+29 more)
ge2/dandelion-dev/package/: setup.cfg
ge2/dandelion-dev/paper/: advisor_update_presentation.md  custom_schedule_limitations_and_math.md  freebase86m_binary_ablation_20260325.md  fused_negative_operator_design.md
ge2/dandelion-dev/scripts/: archive_and_run_freebase_then_twitter_eval.sh  convert_jf17k4.py  create_twitter_10k_eval_split.py  estimate_logical_lane_epoch.py  preprocess_jf17k4.py  run_fb86m_2gpu_stack_ablation.sh  run_fb86m_4gpu_stack_ablation.sh  run_fb86m_single_gpu_stack_ablation.sh  run_freebase86m16p_single_gpu_opt_safe.sh  run_freebase86m_eval.sh  run_freebase86m_train_then_eval.sh  run_freebase_train_then_twitter_eval.sh  run_livejournal16p_single_gpu_opt_safe.sh  run_lj_2gpu_stack_ablation.sh  run_lj_4gpu_stack_ablation.sh  run_lj_single_gpu_stack_ablation.sh  run_lj_single_gpu_train_only_ablation.sh  run_single_gpu_train_only_ablation_matrix.sh  run_twitter16p_logical4_sim.sh  run_twitter16p_single_gpu_opt_safe.sh  run_twitter_2gpu_stack_ablation.sh  run_twitter_4gpu_stack_ablation.sh  run_twitter_single_gpu_stack_ablation.sh  summarize_benchmark_logs.py  test_nary_fixup_smoke.py  update_single_gpu_ablation_table.py
(+78 files in other folders)
